@@ -1,3 +1,10 @@
+2012-12-04  Karthik Bhat  <kv.bhat@samsung.com>
+
+	* i386-tdep.c (i386_skip_prologue): Using symbol table
+	to find the end of prologue for clang compiled binaries.
+	* amd64-tdep.c (amd64_skip_prologue): Using symbol table
+	to find the end of prologue for clang compiled binaries.
+
 2012-12-03  Doug Evans  <dje@google.com>
 
 	* dwarf2read.c (struct dwarf2_per_objfile): Clarify comment.
